# rust-base32

./: Cargo.toml  README.md
benches/: benchmark.rs
src/: alphabet.rs  decode.rs  encode.rs  lib.rs  tests.rs
