[package]
name = "rspamd-base32"
version = "0.1.0"
edition = "2021"
authors = ["Vsevolod Stakhov <vsevolod@rspamd.com>"]
description = "encodes and decodes base32 bug-to-bug compatible with Rspamd"
repository = "https://github.com/vstakhov/rust-base32"
categories = ["encoding"]
readme = "README.md"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dev-dependencies]
rand = "0.8"
criterion = "0.3"

[dependencies]

[features]
default = ["std"]
alloc = []
std = []


# Use criterion benches
[[bench]]
name = "benchmark"
harness = false

