[package]
name = "rspamd-base32"
version = "0.1.1"
edition = "2021"
authors = ["Vsevolod Stakhov <vsevolod@rspamd.com>"]
description = "encodes and decodes base32 bug-to-bug compatible with Rspamd"
repository = "https://github.com/vstakhov/rust-base32"
categories = ["encoding"]
readme = "README.md"
license = "Apache-2.0"

[dev-dependencies]
rand = "0.8"
criterion = "0.5"


[dependencies]

[features]
default = ["std"]
alloc = []
std = []


# Use criterion benches
[[bench]]
name = "benchmark"
harness = false

